# choco_autoplan

./: CMakeLists.txt  Main.cpp  PlanGenerator.cpp  PlanGenerator.h  readme.txt
cfg/: conches_cfg.txt  demands.txt  masses_cfg.txt  production_plan.txt
cmake_helpers/: helpers.cmake
defines/: Defines.h
entities/: Conche.cpp  Conche.h  Mass.cpp  Mass.h
utils/: PlanGeneratorUtils.cpp  PlanGeneratorUtils.h  ReadWriteFile.cpp  ReadWriteFile.h
